@@ -1,7 +1,7 @@
 <skin>
   <defaultresolution>pal</defaultresolution>
   <defaultresolutionwide>pal16x9</defaultresolutionwide>
-  <version>1.90</version>
+  <version>1.99</version>
   <credits>
     <skinname>Project Mayhem III</skinname>
     <name>by Mathias Mahling aka. ChokeManiac</name>
