@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 06-02-2006 fixed: Player.ShowCodec didn't work if music wasn't playing (eg in Slideshow)
+ - 06-02-2006 changed: Bumped skin version to 1.99.  Changes are the render order of control groups is more consistent, and there is no home page fading code.
+ - 06-02-2006 fixed: ControlGroup(group).HasFocus(control) bugs.
  - 06-02-2006 fixed: [ 1423069 ] Controller rumble when using IR remote (don't do it)
  - 05-02-2006 fixed: [ 1406355 ] Last.fm Crashing on Personal radio playback (no audio playable after pap filereader timed out)
  - 05-02-2006 fixed: Last.fm - trackinfo for first track in stream was not always shown.
